--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,8 @@ ui = "1.8.0-alpha06"
 compose = "1.0.0-alpha01"
 runtimeVersion = "1.0.0-alpha01"
 scenecore = "1.0.0-alpha01"
+concurrentFuturesKtx = "1.2.0"
+kotlinxCoroutinesGuava = "1.9.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -37,6 +39,8 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 androidx-compose = { group = "androidx.xr.compose", name = "compose", version.ref = "compose" }
 runtime = { group = "androidx.xr.runtime", name = "runtime", version.ref = "runtimeVersion" }
 androidx-scenecore = { group = "androidx.xr.scenecore", name = "scenecore", version.ref = "scenecore" }
+androidx-concurrent-futures = { module = "androidx.concurrent:concurrent-futures-ktx", version.ref = "concurrentFuturesKtx" }
+kotlinx-coroutines-guava = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-guava", version.ref = "kotlinxCoroutinesGuava" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
