--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,4 @@ org.gradle.configureondemand=true
 org.gradle.daemon=true
 org.gradle.jvmargs=-Xmx8192m -Dfile.encoding=UTF-8 -Xshare:off
 org.gradle.parallel=true
+android.experimental.enableScreenshotTest=true
