--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,48 +1,36 @@
 [versions]
-agp = "8.10.0-alpha04"
-kotlin = "2.0.0"
-coreKtx = "1.15.0"
-junit = "4.13.2"
-junitVersion = "1.2.1"
-espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.8.7"
-lifecycleRuntimeCompose = "2.8.7"
-lifecycleViewmodelCompose = "2.8.7"
-activityCompose = "1.10.0"
-runtime = "1.8.0-alpha06"
-composeBom = "2024.09.00"
-ui = "1.8.0-alpha06"
-compose = "1.0.0-alpha01"
-runtimeVersion = "1.0.0-alpha01"
-scenecore = "1.0.0-alpha01"
-concurrentFuturesKtx = "1.2.0"
+androidx-runtime = "1.8.0-beta03"
+agp = "8.6.1"
+arcore = "1.0.0-alpha03"
+compose = "1.0.0-alpha03"
+impress = "0.0.2"
 kotlinxCoroutinesGuava = "1.9.0"
+scenecore = "1.0.0-alpha03"
+kotlin = "2.1.10"
+concurrentFuturesKtx = "1.2.0"
+activityCompose = "1.10.1"
+composeBom = "2025.02.00"
+material = "1.12.0"
+screenshot = "0.0.1-alpha08"
+adaptiveAndroid = "1.0.0"
 
 [libraries]
-androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-junit = { group = "junit", name = "junit", version.ref = "junit" }
-androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
-androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
-androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
-androidx-lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycleRuntimeCompose" }
-androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
-androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
-androidx-runtime = { group = "androidx.compose.runtime", name = "runtime", version.ref = "runtime" }
-androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
-androidx-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "ui" }
-androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
-androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
-androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
-androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
-androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
-androidx-compose = { group = "androidx.xr.compose", name = "compose", version.ref = "compose" }
-runtime = { group = "androidx.xr.runtime", name = "runtime", version.ref = "runtimeVersion" }
-androidx-scenecore = { group = "androidx.xr.scenecore", name = "scenecore", version.ref = "scenecore" }
-androidx-concurrent-futures = { module = "androidx.concurrent:concurrent-futures-ktx", version.ref = "concurrentFuturesKtx" }
+androidx-arcore = { module = "androidx.xr.arcore:arcore", version.ref = "arcore" }
+androidx-compose = { module = "androidx.xr.compose:compose", version.ref = "compose" }
+androidx-scenecore = { module = "androidx.xr.scenecore:scenecore", version.ref = "scenecore" }
+impress = { module = "com.google.ar:impress", version.ref = "impress" }
 kotlinx-coroutines-guava = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-guava", version.ref = "kotlinxCoroutinesGuava" }
+androidx-compose-material3 = { module = "androidx.compose.material3:material3" }
+material = { module = "com.google.android.material:material", version.ref = "material" }
+androidx-compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
+androidx-concurrent-futures = { module = "androidx.concurrent:concurrent-futures-ktx", version.ref = "concurrentFuturesKtx" }
+androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
+androidx-compose-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "androidx-runtime" }
+androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
+androidx-adaptive-android = { group = "androidx.compose.material3.adaptive", name = "adaptive", version.ref = "adaptiveAndroid" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+screenshot = { id = "com.android.compose.screenshot", version.ref = "screenshot" }
